<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:background="@drawable/background"
            xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/mainLayout"
                  android:layout_width="fill_parent" android:layout_height="fill_parent"
                  xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                    android:text="@string/hello"
                    android:background="@color/background_material_light"/>
        <Button android:id="@id/new_button" android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:onClick="onClick" android:text="@string/new_label" />
        <Button android:id="@id/highscore_button" android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:onClick="onClick" android:text="@string/highscore_label" />
        <Button android:id="@id/help_button" android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:onClick="onClick" android:text="@string/help_label" />
        <Button android:id="@id/about_button" android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:onClick="onClick" android:text="@string/about_label" />
        <Button android:id="@id/invite_button" android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:onClick="onClick" android:text="@string/invite_label" />
        <Button android:id="@id/exit_button" android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:onClick="onClick" android:text="@string/exit_label" />
    </LinearLayout>
</ScrollView>